third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/assign_wrong_type.exp

Diagnostics:
error: expected `u64` but found `bool` (from assignment or declaration context)
  ┌─ tests/checking/typing/v1-commands/assign_wrong_type.move:6:5
  │
6 │     x = false
  │     ^
